# src/routes/order.route.js
@@ -22,6 +22,8 @@ OrderRouter.get(
 OrderRouter.get('/staff', requireApiKey, authenticationStaff, OrderController.getAllOrderByStaffId)
 OrderRouter.get('/owner', requireApiKey, authenticationAdmin, OrderController.getAllOrderByUserId)
 OrderRouter.get('/order/:id', OrderGetByIdValidation, handleValidationErrors, OrderController.getOrderById)
+OrderRouter.get('/user', requireApiKey, handleValidationErrors, OrderController.getUserOrders)
+
 OrderRouter.get(
   '/confirm/:id',
   requireApiKey,
@@ -32,6 +34,10 @@ OrderRouter.get(
 OrderRouter.get('/direct/confirm/:id', requireApiKey, OrderController.confirmDirectOrder)
 OrderRouter.post('/pay/:id', requireApiKey, OrderGetByIdValidation, handleValidationErrors, OrderController.payOrder)
 OrderRouter.post('/', requireApiKey, OrderCreateValidation, handleValidationErrors, OrderController.createOrder)
+OrderRouter.post('/walkin/', requireApiKey, OrderCreateValidation, handleValidationErrors, OrderController.createWalkinOrder)
+OrderRouter.patch('/walkin/pay/:orderId', requireApiKey, OrderCreateValidation, handleValidationErrors, OrderController.updatePaymentStatus)
+
+
 OrderRouter.post(
   '/direct',
   requireApiKey,
@@ -41,14 +47,16 @@ OrderRouter.post(
 )
 
 OrderRouter.put(
-  '/menu/:id',
+  '/:id',
   requireApiKey,
   authenticationStaff,
-  OrderUpdateValidation,
-  handleValidationErrors,
+  // OrderUpdateValidation,
+  // handleValidationErrors,
   OrderController.updateOrder
 )
 OrderRouter.delete('/:id', OrderDeleteValidation, handleValidationErrors, OrderController.deleteOrder)
+OrderRouter.delete('/:orderid/items/:id', OrderController.deleteItemFromOrder)
+
 OrderRouter.put('/checkout/:id', requireApiKey, authenticationStaff, OrderController.updateCheckout)
 OrderRouter.put('/checkin/:id', requireApiKey, authenticationStaff, OrderController.updateCheckin)
 
@@ -60,5 +68,6 @@ OrderRouter.get('/total-order', requireApiKey, authenticationAdmin, OrderControl
 OrderRouter.get('/total-order-hold', requireApiKey, authenticationAdmin, OrderController.countOrdersByStatus)
 OrderRouter.get('/retaurant-name', requireApiKey, authenticationAdmin, OrderController.getMostFrequentRestaurantName)
 OrderRouter.get('/revenue/five-years', requireApiKey, authenticationAdmin, OrderController.totalRevenueOrder5Years)
+OrderRouter.get('/revenue/current-years', requireApiKey, authenticationAdmin, OrderController.totalRevenueCurrentYear)
 
 export { OrderRouter }
